# BioMedArena-0

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  config.yaml  config_claude.yaml  config_gemini.yaml  config_openai_compatible.yaml  pyproject.toml  quick_run.sh
baselines/langgraph_react/: __init__.py  agent.py  tool_adapter.py
configs/: matrix_default.yaml
docs/: api_reference.md  benchmark_datasets.md  metrics_guide.md  tools_and_skills.md
examples/: ehr_query.py  genomics_query.py  multimodal_query.py
harness/: __init__.py  _bootstrap.py  adapter_base.py  benchmark_config.py  cli.py  context_injection.py  cost_monitor.py  llm_client.py  orchestrator.py  trace.py
harness/adapters/: __init__.py  _vendor_mixin.py  agentclinic_adapter.py  biomcp_adapter.py  biomni_adapter.py  calculator_adapter.py  chemistry_adapter.py  colacare_adapter.py  dicom_adapter.py  dicom_mcp_adapter.py  drugagent_adapter.py  ehragent_adapter.py  fhir_adapter.py  geneagent_adapter.py  geneagent_native.py  genegpt_adapter.py  genomas_adapter.py  genotex_adapter.py  mcp_base.py  mcp_extra_adapters.py  mcp_registry.yaml  mdagents_adapter.py  mdagents_native.py  medagent_pro_adapter.py  medagentbench_adapter.py  ncbi_tools_adapter.py  openbio_adapter.py  phenoage_adapter.py  prompt2pill_adapter.py  protein_adapter.py  pytdc_adapter.py  singlecell_adapter.py  tooluniverse_adapter.py  torchxrv_adapter.py  txagent_adapter.py  txagent_stub_adapter.py  vendor_runner.py  wearable_adapter.py
harness/benchmark_configs/: __init__.py  registry.py
harness/context/: __init__.py  budget.py  tool_retrieval.py
harness/context_managers/: __init__.py  base.py  external_memory.py  selective_clearing.py  summarization.py  system_level.py  truncation.py  turn_rollback.py
harness/eval/: __init__.py  bench_aa_lcr.py  bench_agentclinic.py  bench_bioasq.py  bench_bioprobench.py  bench_bixbench.py  bench_genotex.py  bench_gpqa_bio.py  bench_healthbench.py  bench_hf_benchmark.py  bench_hle_gold.py  bench_labbench.py  bench_labbench2.py  bench_mmlu.py  (+33 more)
scripts/: benchmark_source_manifest.py  release_gate.py  run_matrix.py  run_quick_suite.py  verify_benchmark_sources.py
tests/: smoke_olsp.py  test_adapters.py  test_e2e.py  test_orchestrator.py
(+82 files in other folders)
